converted The option Edit modals into vue components. Addded sort_order to itemOption model
